# mystique

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  daemon.txt  make_release.sh
.github/workflows/: codeql.yml
docs/: faq.html  index.html  package.json  tailwind.config.js
docs/src/: styles.css
mystiqueapp/mystiqueapp/: AppDelegate.swift  ViewController.swift
mystiqueapp/mystiqueapp.xcodeproj/: project.pbxproj
mystiqueapp/mystiqueapp.xcodeproj/project.xcworkspace/xcuserdata/penguinify.xcuserdatad/: UserInterfaceState.xcuserstate
mystiqueapp/mystiqueapp.xcodeproj/xcuserdata/penguinify.xcuserdatad/xcschemes/: xcschememanagement.plist
mystiqueapp/mystiqueapp/Assets.xcassets/mystique.imageset/: Contents.json
mystiqueapp/mystiqueapp/Base.lproj/: Main.storyboard
mystiqueapp/mystiqueappTests/: mystiqueappTests.swift
mystiqueapp/mystiqueappUITests/: mystiqueappUITests.swift  mystiqueappUITestsLaunchTests.swift
src/: conf.h  daemon.txt  lib.c  lib.h  main.c
src/ml/: classify.py  data.py  pyproject.toml  train.py
src/ml/models/: model.pkl
src/ml/trainingdata/: advertisement.csv  song.csv
